// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Customize CTabPane component > renders correctly 1`] = `
"<transition-stub appear="false" persisted="false" css="true">
  <div class="tab-pane active fade show">Default slot</div>
</transition-stub>"
`;

exports[`Loads and display CTabPane component > renders correctly 1`] = `
"<transition-stub appear="false" persisted="false" css="true">
  <div class="tab-pane fade" style="display: none;">Default slot</div>
</transition-stub>"
`;
